--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
-html, body {
-  margin: 0;
-  padding: 0;
+#wrapper {
+  display: grid;
+  grid-template-columns:
+    1fr
+    min(80ch, 100%)
+    1fr;
 }
+
+#wrapper > * {
+  grid-column: 2;
+}
+
 canvas {
   display: block;
 }
