--- a/style.css
+++ b/style.css
@@ -13,3 +13,47 @@
 canvas {
   display: block;
 }
+
+body {
+  font-family: Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 46px;
+  line-height: 1;
+  margin: 24px 0 12px 0;
+}
+
+h2 {
+  font-size: 34px;
+  line-height: 1;
+  margin: 24px 0 12px 0;
+}
+
+h3 {
+  font-size: 22px;
+  line-height: 1;
+  margin: 24px 0 12px 0;
+}
+
+h4 {
+  font-size: 18px;
+  line-height: 1;
+  margin: 24px 0 12px 0;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 0 0 24px 0;
+}
+
+ul {
+  list-style-type: circle;
+  font-size: 18px;
+  margin: 0 0 12px 0;
+}
+
+li {
+  line-height: 1.5;
+}
